--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ body {
     font-family: Cormorant Garamond, serif;
     font-size: 3rem;
     margin: 0 0 0.5rem 0;
-    font-weight: normal;
+    font-weight: 400;
+    font-style: italic;
     color: #000;
 }
 
@@ -91,7 +92,7 @@ section h2 {
     font-size: 1.5rem;
     margin: 0 0 1.5rem 0;
     color: #000;
-    font-weight: 900;
+    font-weight: 500;
 }
 
 .item-line {
@@ -148,6 +149,17 @@ section h2 {
     padding-left: 1rem;
 }
 
+.method-section {
+    margin-bottom: 2rem;    /* more space below */
+    /* padding-left: 1rem; */
+}
+
+.method-item {
+    /* margin: 0.3rem 0; */
+    color: #333;
+    font-size: 0.8rem;
+}
+
 /* Footer */
 footer {
     background: #fafafa;
@@ -169,7 +181,7 @@ footer {
     font-family: Cormorant Garamond, serif;
     font-size: 2rem;
     margin-bottom: 1.5rem;
-    font-weight: normal;
+    font-weight: 400;
 }
 
 .about-content p {
